--- a/flask_web/templates/index.html
+++ b/flask_web/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+
 <div class="row">
     <div class="col-xl-12 col-lg-12">
         <div class="card shadow mb-4">
@@ -9,7 +10,7 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                    <table class="table table-bordered table-striped" id="dataTable" width="100%" cellspacing="0">
                         <thead>
                         <tr>
                             <th>Date</th>
@@ -92,5 +93,4 @@
         </div>
     </div>
 </div>
-
 {% endblock %}
