--- a/flask_web/templates/mystudents.html
+++ b/flask_web/templates/mystudents.html
@@ -65,6 +65,8 @@
                                    href="/mystudents/{{ student.external_id }}/remove"
                                    data-toggle="modal" data-target="#remove{{ student.external_id }}Modal"
                                    role="button">Remove</a>
+                                <a class="btn btn-secondary btn-sm"
+                                   href="/mystudents/{{ student.external_id }}/print" role="button"><i class="fas fa-print"></i> Print</a>
                             </td>
                         </tr>
 
